fix  (core): Replace String Templates with simple concatenation, and remove --enable-preview (fixes #698)